// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot test dev 1`] = `
{
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
    "SsmParameterValueawsserviceamiamazonlinuxlatestamzn2amihvmx8664gp2C96584B6F00A464EAD1953AFF4B05118Parameter": {
      "Default": "/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2",
      "Type": "AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>",
    },
  },
  "Resources": {
    "NetworkEC2SgD140AE73": {
      "Properties": {
        "GroupDescription": "Stack/Network/EC2Sg",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "from 0.0.0.0/0:ALL PORTS",
            "FromPort": 0,
            "IpProtocol": "tcp",
            "ToPort": 65535,
          },
        ],
        "VpcId": {
          "Ref": "NetworkVpc7FB7348F",
        },
      },
      "Type": "AWS::EC2::SecurityGroup",
    },
    "NetworkVpc7FB7348F": {
      "Properties": {
        "CidrBlock": "10.0.0.0/16",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "InstanceTenancy": "default",
        "Tags": [
          {
            "Key": "Name",
            "Value": "dev-vpc",
          },
        ],
      },
      "Type": "AWS::EC2::VPC",
    },
    "NetworkVpcIGW6BEA7B02": {
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "dev-vpc",
          },
        ],
      },
      "Type": "AWS::EC2::InternetGateway",
    },
    "NetworkVpcIsolatedSubnet1RouteTableAssociation95EB126D": {
      "Properties": {
        "RouteTableId": {
          "Ref": "NetworkVpcIsolatedSubnet1RouteTableC39A3F61",
        },
        "SubnetId": {
          "Ref": "NetworkVpcIsolatedSubnet1Subnet0400477E",
        },
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
    },
    "NetworkVpcIsolatedSubnet1RouteTableC39A3F61": {
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "Stack/Network/Vpc/IsolatedSubnet1",
          },
        ],
        "VpcId": {
          "Ref": "NetworkVpc7FB7348F",
        },
      },
      "Type": "AWS::EC2::RouteTable",
    },
    "NetworkVpcIsolatedSubnet1Subnet0400477E": {
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": "",
            },
          ],
        },
        "CidrBlock": "10.0.128.0/18",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Isolated",
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Isolated",
          },
          {
            "Key": "Name",
            "Value": "Stack/Network/Vpc/IsolatedSubnet1",
          },
        ],
        "VpcId": {
          "Ref": "NetworkVpc7FB7348F",
        },
      },
      "Type": "AWS::EC2::Subnet",
    },
    "NetworkVpcIsolatedSubnet2RouteTable77E6320E": {
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "Stack/Network/Vpc/IsolatedSubnet2",
          },
        ],
        "VpcId": {
          "Ref": "NetworkVpc7FB7348F",
        },
      },
      "Type": "AWS::EC2::RouteTable",
    },
    "NetworkVpcIsolatedSubnet2RouteTableAssociationC53FE45A": {
      "Properties": {
        "RouteTableId": {
          "Ref": "NetworkVpcIsolatedSubnet2RouteTable77E6320E",
        },
        "SubnetId": {
          "Ref": "NetworkVpcIsolatedSubnet2SubnetF65B365A",
        },
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
    },
    "NetworkVpcIsolatedSubnet2SubnetF65B365A": {
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": "",
            },
          ],
        },
        "CidrBlock": "10.0.192.0/18",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Isolated",
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Isolated",
          },
          {
            "Key": "Name",
            "Value": "Stack/Network/Vpc/IsolatedSubnet2",
          },
        ],
        "VpcId": {
          "Ref": "NetworkVpc7FB7348F",
        },
      },
      "Type": "AWS::EC2::Subnet",
    },
    "NetworkVpcPublicSubnet1DefaultRoute31EC04EC": {
      "DependsOn": [
        "NetworkVpcVPCGW8F3799B5",
      ],
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "NetworkVpcIGW6BEA7B02",
        },
        "RouteTableId": {
          "Ref": "NetworkVpcPublicSubnet1RouteTable30235CE2",
        },
      },
      "Type": "AWS::EC2::Route",
    },
    "NetworkVpcPublicSubnet1RouteTable30235CE2": {
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "Stack/Network/Vpc/PublicSubnet1",
          },
        ],
        "VpcId": {
          "Ref": "NetworkVpc7FB7348F",
        },
      },
      "Type": "AWS::EC2::RouteTable",
    },
    "NetworkVpcPublicSubnet1RouteTableAssociation643926C7": {
      "Properties": {
        "RouteTableId": {
          "Ref": "NetworkVpcPublicSubnet1RouteTable30235CE2",
        },
        "SubnetId": {
          "Ref": "NetworkVpcPublicSubnet1Subnet36933139",
        },
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
    },
    "NetworkVpcPublicSubnet1Subnet36933139": {
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": "",
            },
          ],
        },
        "CidrBlock": "10.0.0.0/18",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public",
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public",
          },
          {
            "Key": "Name",
            "Value": "Stack/Network/Vpc/PublicSubnet1",
          },
        ],
        "VpcId": {
          "Ref": "NetworkVpc7FB7348F",
        },
      },
      "Type": "AWS::EC2::Subnet",
    },
    "NetworkVpcPublicSubnet2DefaultRoute0CF082AB": {
      "DependsOn": [
        "NetworkVpcVPCGW8F3799B5",
      ],
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "NetworkVpcIGW6BEA7B02",
        },
        "RouteTableId": {
          "Ref": "NetworkVpcPublicSubnet2RouteTable0FACEBB2",
        },
      },
      "Type": "AWS::EC2::Route",
    },
    "NetworkVpcPublicSubnet2RouteTable0FACEBB2": {
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "Stack/Network/Vpc/PublicSubnet2",
          },
        ],
        "VpcId": {
          "Ref": "NetworkVpc7FB7348F",
        },
      },
      "Type": "AWS::EC2::RouteTable",
    },
    "NetworkVpcPublicSubnet2RouteTableAssociationC662643B": {
      "Properties": {
        "RouteTableId": {
          "Ref": "NetworkVpcPublicSubnet2RouteTable0FACEBB2",
        },
        "SubnetId": {
          "Ref": "NetworkVpcPublicSubnet2SubnetC427CCE0",
        },
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
    },
    "NetworkVpcPublicSubnet2SubnetC427CCE0": {
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": "",
            },
          ],
        },
        "CidrBlock": "10.0.64.0/18",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public",
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public",
          },
          {
            "Key": "Name",
            "Value": "Stack/Network/Vpc/PublicSubnet2",
          },
        ],
        "VpcId": {
          "Ref": "NetworkVpc7FB7348F",
        },
      },
      "Type": "AWS::EC2::Subnet",
    },
    "NetworkVpcVPCGW8F3799B5": {
      "Properties": {
        "InternetGatewayId": {
          "Ref": "NetworkVpcIGW6BEA7B02",
        },
        "VpcId": {
          "Ref": "NetworkVpc7FB7348F",
        },
      },
      "Type": "AWS::EC2::VPCGatewayAttachment",
    },
    "ServerInstanceE518391B": {
      "DependsOn": [
        "ServerInstanceInstanceRoleF9CE4B3B",
      ],
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": "",
            },
          ],
        },
        "IamInstanceProfile": {
          "Ref": "ServerInstanceInstanceProfile5CC6E324",
        },
        "ImageId": {
          "Ref": "SsmParameterValueawsserviceamiamazonlinuxlatestamzn2amihvmx8664gp2C96584B6F00A464EAD1953AFF4B05118Parameter",
        },
        "InstanceType": "t3.small",
        "PropagateTagsToVolumeOnCreation": true,
        "SecurityGroupIds": [
          {
            "Fn::GetAtt": [
              "NetworkEC2SgD140AE73",
              "GroupId",
            ],
          },
        ],
        "SubnetId": {
          "Ref": "NetworkVpcPublicSubnet1Subnet36933139",
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "Stack/Server/Instance",
          },
        ],
        "UserData": {
          "Fn::Base64": "#!/bin/bash",
        },
      },
      "Type": "AWS::EC2::Instance",
    },
    "ServerInstanceInstanceProfile5CC6E324": {
      "Properties": {
        "Roles": [
          {
            "Ref": "ServerInstanceInstanceRoleF9CE4B3B",
          },
        ],
      },
      "Type": "AWS::IAM::InstanceProfile",
    },
    "ServerInstanceInstanceRoleF9CE4B3B": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "ec2.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/AmazonSSMManagedInstanceCore",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "Stack/Server/Instance",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`snapshot test prod 1`] = `
{
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
    "SsmParameterValueawsserviceamiamazonlinuxlatestamzn2amihvmx8664gp2C96584B6F00A464EAD1953AFF4B05118Parameter": {
      "Default": "/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2",
      "Type": "AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>",
    },
  },
  "Resources": {
    "NetworkEC2SgD140AE73": {
      "Properties": {
        "GroupDescription": "Stack/Network/EC2Sg",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "from 0.0.0.0/0:ALL PORTS",
            "FromPort": 0,
            "IpProtocol": "tcp",
            "ToPort": 65535,
          },
        ],
        "VpcId": {
          "Ref": "NetworkVpc7FB7348F",
        },
      },
      "Type": "AWS::EC2::SecurityGroup",
    },
    "NetworkVpc7FB7348F": {
      "Properties": {
        "CidrBlock": "10.2.0.0/16",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "InstanceTenancy": "default",
        "Tags": [
          {
            "Key": "Name",
            "Value": "prod-vpc",
          },
        ],
      },
      "Type": "AWS::EC2::VPC",
    },
    "NetworkVpcIGW6BEA7B02": {
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "prod-vpc",
          },
        ],
      },
      "Type": "AWS::EC2::InternetGateway",
    },
    "NetworkVpcIsolatedSubnet1RouteTableAssociation95EB126D": {
      "Properties": {
        "RouteTableId": {
          "Ref": "NetworkVpcIsolatedSubnet1RouteTableC39A3F61",
        },
        "SubnetId": {
          "Ref": "NetworkVpcIsolatedSubnet1Subnet0400477E",
        },
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
    },
    "NetworkVpcIsolatedSubnet1RouteTableC39A3F61": {
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "Stack/Network/Vpc/IsolatedSubnet1",
          },
        ],
        "VpcId": {
          "Ref": "NetworkVpc7FB7348F",
        },
      },
      "Type": "AWS::EC2::RouteTable",
    },
    "NetworkVpcIsolatedSubnet1Subnet0400477E": {
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": "",
            },
          ],
        },
        "CidrBlock": "10.2.128.0/18",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Isolated",
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Isolated",
          },
          {
            "Key": "Name",
            "Value": "Stack/Network/Vpc/IsolatedSubnet1",
          },
        ],
        "VpcId": {
          "Ref": "NetworkVpc7FB7348F",
        },
      },
      "Type": "AWS::EC2::Subnet",
    },
    "NetworkVpcIsolatedSubnet2RouteTable77E6320E": {
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "Stack/Network/Vpc/IsolatedSubnet2",
          },
        ],
        "VpcId": {
          "Ref": "NetworkVpc7FB7348F",
        },
      },
      "Type": "AWS::EC2::RouteTable",
    },
    "NetworkVpcIsolatedSubnet2RouteTableAssociationC53FE45A": {
      "Properties": {
        "RouteTableId": {
          "Ref": "NetworkVpcIsolatedSubnet2RouteTable77E6320E",
        },
        "SubnetId": {
          "Ref": "NetworkVpcIsolatedSubnet2SubnetF65B365A",
        },
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
    },
    "NetworkVpcIsolatedSubnet2SubnetF65B365A": {
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": "",
            },
          ],
        },
        "CidrBlock": "10.2.192.0/18",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Isolated",
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Isolated",
          },
          {
            "Key": "Name",
            "Value": "Stack/Network/Vpc/IsolatedSubnet2",
          },
        ],
        "VpcId": {
          "Ref": "NetworkVpc7FB7348F",
        },
      },
      "Type": "AWS::EC2::Subnet",
    },
    "NetworkVpcPublicSubnet1DefaultRoute31EC04EC": {
      "DependsOn": [
        "NetworkVpcVPCGW8F3799B5",
      ],
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "NetworkVpcIGW6BEA7B02",
        },
        "RouteTableId": {
          "Ref": "NetworkVpcPublicSubnet1RouteTable30235CE2",
        },
      },
      "Type": "AWS::EC2::Route",
    },
    "NetworkVpcPublicSubnet1RouteTable30235CE2": {
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "Stack/Network/Vpc/PublicSubnet1",
          },
        ],
        "VpcId": {
          "Ref": "NetworkVpc7FB7348F",
        },
      },
      "Type": "AWS::EC2::RouteTable",
    },
    "NetworkVpcPublicSubnet1RouteTableAssociation643926C7": {
      "Properties": {
        "RouteTableId": {
          "Ref": "NetworkVpcPublicSubnet1RouteTable30235CE2",
        },
        "SubnetId": {
          "Ref": "NetworkVpcPublicSubnet1Subnet36933139",
        },
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
    },
    "NetworkVpcPublicSubnet1Subnet36933139": {
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": "",
            },
          ],
        },
        "CidrBlock": "10.2.0.0/18",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public",
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public",
          },
          {
            "Key": "Name",
            "Value": "Stack/Network/Vpc/PublicSubnet1",
          },
        ],
        "VpcId": {
          "Ref": "NetworkVpc7FB7348F",
        },
      },
      "Type": "AWS::EC2::Subnet",
    },
    "NetworkVpcPublicSubnet2DefaultRoute0CF082AB": {
      "DependsOn": [
        "NetworkVpcVPCGW8F3799B5",
      ],
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "NetworkVpcIGW6BEA7B02",
        },
        "RouteTableId": {
          "Ref": "NetworkVpcPublicSubnet2RouteTable0FACEBB2",
        },
      },
      "Type": "AWS::EC2::Route",
    },
    "NetworkVpcPublicSubnet2RouteTable0FACEBB2": {
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "Stack/Network/Vpc/PublicSubnet2",
          },
        ],
        "VpcId": {
          "Ref": "NetworkVpc7FB7348F",
        },
      },
      "Type": "AWS::EC2::RouteTable",
    },
    "NetworkVpcPublicSubnet2RouteTableAssociationC662643B": {
      "Properties": {
        "RouteTableId": {
          "Ref": "NetworkVpcPublicSubnet2RouteTable0FACEBB2",
        },
        "SubnetId": {
          "Ref": "NetworkVpcPublicSubnet2SubnetC427CCE0",
        },
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
    },
    "NetworkVpcPublicSubnet2SubnetC427CCE0": {
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": "",
            },
          ],
        },
        "CidrBlock": "10.2.64.0/18",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public",
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public",
          },
          {
            "Key": "Name",
            "Value": "Stack/Network/Vpc/PublicSubnet2",
          },
        ],
        "VpcId": {
          "Ref": "NetworkVpc7FB7348F",
        },
      },
      "Type": "AWS::EC2::Subnet",
    },
    "NetworkVpcVPCGW8F3799B5": {
      "Properties": {
        "InternetGatewayId": {
          "Ref": "NetworkVpcIGW6BEA7B02",
        },
        "VpcId": {
          "Ref": "NetworkVpc7FB7348F",
        },
      },
      "Type": "AWS::EC2::VPCGatewayAttachment",
    },
    "ServerInstanceE518391B": {
      "DependsOn": [
        "ServerInstanceInstanceRoleF9CE4B3B",
      ],
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": "",
            },
          ],
        },
        "IamInstanceProfile": {
          "Ref": "ServerInstanceInstanceProfile5CC6E324",
        },
        "ImageId": {
          "Ref": "SsmParameterValueawsserviceamiamazonlinuxlatestamzn2amihvmx8664gp2C96584B6F00A464EAD1953AFF4B05118Parameter",
        },
        "InstanceType": "t3.large",
        "PropagateTagsToVolumeOnCreation": true,
        "SecurityGroupIds": [
          {
            "Fn::GetAtt": [
              "NetworkEC2SgD140AE73",
              "GroupId",
            ],
          },
        ],
        "SubnetId": {
          "Ref": "NetworkVpcPublicSubnet1Subnet36933139",
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "Stack/Server/Instance",
          },
        ],
        "UserData": {
          "Fn::Base64": "#!/bin/bash",
        },
      },
      "Type": "AWS::EC2::Instance",
    },
    "ServerInstanceInstanceProfile5CC6E324": {
      "Properties": {
        "Roles": [
          {
            "Ref": "ServerInstanceInstanceRoleF9CE4B3B",
          },
        ],
      },
      "Type": "AWS::IAM::InstanceProfile",
    },
    "ServerInstanceInstanceRoleF9CE4B3B": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "ec2.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/AmazonSSMManagedInstanceCore",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "Stack/Server/Instance",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`snapshot test stg 1`] = `
{
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
    "SsmParameterValueawsserviceamiamazonlinuxlatestamzn2amihvmx8664gp2C96584B6F00A464EAD1953AFF4B05118Parameter": {
      "Default": "/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2",
      "Type": "AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>",
    },
  },
  "Resources": {
    "NetworkEC2SgD140AE73": {
      "Properties": {
        "GroupDescription": "Stack/Network/EC2Sg",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "from 0.0.0.0/0:ALL PORTS",
            "FromPort": 0,
            "IpProtocol": "tcp",
            "ToPort": 65535,
          },
        ],
        "VpcId": {
          "Ref": "NetworkVpc7FB7348F",
        },
      },
      "Type": "AWS::EC2::SecurityGroup",
    },
    "NetworkVpc7FB7348F": {
      "Properties": {
        "CidrBlock": "10.1.0.0/16",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "InstanceTenancy": "default",
        "Tags": [
          {
            "Key": "Name",
            "Value": "stg-vpc",
          },
        ],
      },
      "Type": "AWS::EC2::VPC",
    },
    "NetworkVpcIGW6BEA7B02": {
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "stg-vpc",
          },
        ],
      },
      "Type": "AWS::EC2::InternetGateway",
    },
    "NetworkVpcIsolatedSubnet1RouteTableAssociation95EB126D": {
      "Properties": {
        "RouteTableId": {
          "Ref": "NetworkVpcIsolatedSubnet1RouteTableC39A3F61",
        },
        "SubnetId": {
          "Ref": "NetworkVpcIsolatedSubnet1Subnet0400477E",
        },
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
    },
    "NetworkVpcIsolatedSubnet1RouteTableC39A3F61": {
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "Stack/Network/Vpc/IsolatedSubnet1",
          },
        ],
        "VpcId": {
          "Ref": "NetworkVpc7FB7348F",
        },
      },
      "Type": "AWS::EC2::RouteTable",
    },
    "NetworkVpcIsolatedSubnet1Subnet0400477E": {
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": "",
            },
          ],
        },
        "CidrBlock": "10.1.128.0/18",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Isolated",
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Isolated",
          },
          {
            "Key": "Name",
            "Value": "Stack/Network/Vpc/IsolatedSubnet1",
          },
        ],
        "VpcId": {
          "Ref": "NetworkVpc7FB7348F",
        },
      },
      "Type": "AWS::EC2::Subnet",
    },
    "NetworkVpcIsolatedSubnet2RouteTable77E6320E": {
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "Stack/Network/Vpc/IsolatedSubnet2",
          },
        ],
        "VpcId": {
          "Ref": "NetworkVpc7FB7348F",
        },
      },
      "Type": "AWS::EC2::RouteTable",
    },
    "NetworkVpcIsolatedSubnet2RouteTableAssociationC53FE45A": {
      "Properties": {
        "RouteTableId": {
          "Ref": "NetworkVpcIsolatedSubnet2RouteTable77E6320E",
        },
        "SubnetId": {
          "Ref": "NetworkVpcIsolatedSubnet2SubnetF65B365A",
        },
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
    },
    "NetworkVpcIsolatedSubnet2SubnetF65B365A": {
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": "",
            },
          ],
        },
        "CidrBlock": "10.1.192.0/18",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Isolated",
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Isolated",
          },
          {
            "Key": "Name",
            "Value": "Stack/Network/Vpc/IsolatedSubnet2",
          },
        ],
        "VpcId": {
          "Ref": "NetworkVpc7FB7348F",
        },
      },
      "Type": "AWS::EC2::Subnet",
    },
    "NetworkVpcPublicSubnet1DefaultRoute31EC04EC": {
      "DependsOn": [
        "NetworkVpcVPCGW8F3799B5",
      ],
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "NetworkVpcIGW6BEA7B02",
        },
        "RouteTableId": {
          "Ref": "NetworkVpcPublicSubnet1RouteTable30235CE2",
        },
      },
      "Type": "AWS::EC2::Route",
    },
    "NetworkVpcPublicSubnet1RouteTable30235CE2": {
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "Stack/Network/Vpc/PublicSubnet1",
          },
        ],
        "VpcId": {
          "Ref": "NetworkVpc7FB7348F",
        },
      },
      "Type": "AWS::EC2::RouteTable",
    },
    "NetworkVpcPublicSubnet1RouteTableAssociation643926C7": {
      "Properties": {
        "RouteTableId": {
          "Ref": "NetworkVpcPublicSubnet1RouteTable30235CE2",
        },
        "SubnetId": {
          "Ref": "NetworkVpcPublicSubnet1Subnet36933139",
        },
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
    },
    "NetworkVpcPublicSubnet1Subnet36933139": {
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": "",
            },
          ],
        },
        "CidrBlock": "10.1.0.0/18",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public",
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public",
          },
          {
            "Key": "Name",
            "Value": "Stack/Network/Vpc/PublicSubnet1",
          },
        ],
        "VpcId": {
          "Ref": "NetworkVpc7FB7348F",
        },
      },
      "Type": "AWS::EC2::Subnet",
    },
    "NetworkVpcPublicSubnet2DefaultRoute0CF082AB": {
      "DependsOn": [
        "NetworkVpcVPCGW8F3799B5",
      ],
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "NetworkVpcIGW6BEA7B02",
        },
        "RouteTableId": {
          "Ref": "NetworkVpcPublicSubnet2RouteTable0FACEBB2",
        },
      },
      "Type": "AWS::EC2::Route",
    },
    "NetworkVpcPublicSubnet2RouteTable0FACEBB2": {
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "Stack/Network/Vpc/PublicSubnet2",
          },
        ],
        "VpcId": {
          "Ref": "NetworkVpc7FB7348F",
        },
      },
      "Type": "AWS::EC2::RouteTable",
    },
    "NetworkVpcPublicSubnet2RouteTableAssociationC662643B": {
      "Properties": {
        "RouteTableId": {
          "Ref": "NetworkVpcPublicSubnet2RouteTable0FACEBB2",
        },
        "SubnetId": {
          "Ref": "NetworkVpcPublicSubnet2SubnetC427CCE0",
        },
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
    },
    "NetworkVpcPublicSubnet2SubnetC427CCE0": {
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": "",
            },
          ],
        },
        "CidrBlock": "10.1.64.0/18",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public",
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public",
          },
          {
            "Key": "Name",
            "Value": "Stack/Network/Vpc/PublicSubnet2",
          },
        ],
        "VpcId": {
          "Ref": "NetworkVpc7FB7348F",
        },
      },
      "Type": "AWS::EC2::Subnet",
    },
    "NetworkVpcVPCGW8F3799B5": {
      "Properties": {
        "InternetGatewayId": {
          "Ref": "NetworkVpcIGW6BEA7B02",
        },
        "VpcId": {
          "Ref": "NetworkVpc7FB7348F",
        },
      },
      "Type": "AWS::EC2::VPCGatewayAttachment",
    },
    "ServerInstanceE518391B": {
      "DependsOn": [
        "ServerInstanceInstanceRoleF9CE4B3B",
      ],
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": "",
            },
          ],
        },
        "IamInstanceProfile": {
          "Ref": "ServerInstanceInstanceProfile5CC6E324",
        },
        "ImageId": {
          "Ref": "SsmParameterValueawsserviceamiamazonlinuxlatestamzn2amihvmx8664gp2C96584B6F00A464EAD1953AFF4B05118Parameter",
        },
        "InstanceType": "t3.large",
        "PropagateTagsToVolumeOnCreation": true,
        "SecurityGroupIds": [
          {
            "Fn::GetAtt": [
              "NetworkEC2SgD140AE73",
              "GroupId",
            ],
          },
        ],
        "SubnetId": {
          "Ref": "NetworkVpcPublicSubnet1Subnet36933139",
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "Stack/Server/Instance",
          },
        ],
        "UserData": {
          "Fn::Base64": "#!/bin/bash",
        },
      },
      "Type": "AWS::EC2::Instance",
    },
    "ServerInstanceInstanceProfile5CC6E324": {
      "Properties": {
        "Roles": [
          {
            "Ref": "ServerInstanceInstanceRoleF9CE4B3B",
          },
        ],
      },
      "Type": "AWS::IAM::InstanceProfile",
    },
    "ServerInstanceInstanceRoleF9CE4B3B": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "ec2.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/AmazonSSMManagedInstanceCore",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "Stack/Server/Instance",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;
